rotas funcionando mal

--- a/pilotoxconta/src/styles.css
+++ b/pilotoxconta/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+
+    background-size: cover;
+    background-image: url('assets/bg_pilotox.jpg');
+    width: 100%;
+    height:100%;
+    position: fixed;
+    
+    }
+    
+    
