--- a/pilotoxconta/src/app/layout/menu/menu.component.html
+++ b/pilotoxconta/src/app/layout/menu/menu.component.html
@@ -5,9 +5,10 @@
 
                 <div class="uk-navbar-center">
                     <ul class="uk-navbar-nav uk-navbar-center">
-                        <li><a [routerLink]="['/eliminar']">INÍCIO</a></li>
-                        <li><a [routerLink]="['/privacidade']">POLÍTICAS DE PRIVACIDADE</a></li>
-                        <li><a [routerLink]="['/privacidade']">ACERCA</a></li>
+                        <li><a [routerLink]="['/inicio']" routerLinkActive="active">INÍCIO</a></li>
+                        <li><a [routerLink]="['/privacy']" routerLinkActive="active">POLÍTICA DE PRIVACIDADE</a></li>
+                        <li><a href="https://play.google.com/store/apps/details?id=com.pilotox.taxirider" routerLinkActive="active">ACERCA</a></li>
+                        
                     </ul>
                 </div>
             </div>
