--- a/pilotoxconta/src/app/paginas/inicio/inicio.component.html
+++ b/pilotoxconta/src/app/paginas/inicio/inicio.component.html
@@ -5,12 +5,10 @@
         <img class="logo" src="/assets/logo.png">
         <div>
     <div class="uk-text-center">
-        <a [routerLink]="['/eliminar']"><button class="uk-button uk-button-large uk-button-danger uk-width-auto uk-margin-small-bottom">BAIXAR APP</button></a>
+        <a href="https://play.google.com/store/apps/details?id=com.pilotox.taxirider"><button class="uk-border-rounded  uk-button uk-button-large uk-button-danger uk-width-auto uk-margin-small-bottom">BAIXAR APP</button></a>
     </div>
-        <a [routerLink]="['/eliminar']"><button class="uk-button uk-button-large uk-button-danger uk-width-auto uk-margin-small-bottom">ELIMINAR CONTA</button></a>
+        <a [routerLink]="['/eliminar']"><button class=" uk-border-rounded uk-button uk-button-large uk-button-danger uk-width-auto uk-margin-small-bottom">ELIMINAR CONTA</button></a> 
     </div>    
     
 
     </div>
-
-
