--- a/pilotoxconta/src/styles.css
+++ b/pilotoxconta/src/styles.css
@@ -3,10 +3,7 @@ body {
 
     background-size: cover;
     background-image: url('assets/bg_pilotox.jpg');
-    width: 100%;
-    height:100%;
-    position: fixed;
-    
+    min-height: 100vh;
     }
     
     
